# Kafkadventure

./: .env-sample  .gitignore  Kafkadventure.sln  README.md  docker-compose.yml  requirements.txt
KA.Domain/: KA.Domain.csproj
KA.Domain/Consts/: Server.cs  Topic.cs  Topics.cs
KA.Domain/Dtos/: AnimalSightingDto.cs
KA.Domain/Enums/: AnimalEnum.cs
KA.KafkaOrchestrator/: Program.cs
KA.KafkaServices/: KA.Application.csproj
KA.KafkaServices/Services/Consumers/: DemoConsumer.cs
KA.KafkaServices/Services/Consumers/Sightings/: DragonSightingConsumer.cs  FrogSightingConsumer.cs  LlamaSightingConsumer.cs  SightingConsumerBase.cs
KA.KafkaServices/Services/Producers/: DemoProducer.cs  SightingProducer.cs
KA.KafkaServices/UseCases/GenerateNonsenseEvent/: GenerateNonsenseEvent.cs
Kafkadventure/KA.KafkaOrchestrator/: KA.KafkaOrchestrator.csproj  Program.cs
Kafkadventure/KA.KafkaServices/Services/: DemoConsumer.cs  DemoProducer.cs
consumer-rs/: Cargo.toml
consumer-rs/src/: config.rs  handlers.rs  kafka.rs  main.rs  models.rs  ws.rs
dotnet/: Kafkadventure.sln
dotnet/KA.Domain/: KA.Domain.csproj
dotnet/KA.Domain/Classes/: HaversineCalculator.cs  SexantUtils.cs
dotnet/KA.Domain/Dtos/: AnimalSightingDto.cs  EventDto.cs
dotnet/KA.Domain/Enums/: AnimalEnum.cs  LochEnum.cs
dotnet/KA.Domain/Extensions/: EnumExtensions.cs
dotnet/KA.KafkaOrchestrator/: KA.KafkaOrchestrator_Demo.csproj  Program.cs
dotnet/KA.KafkaOrchestrator.Domain.Tests/: KA.KafkaOrchestrator.Domain.Tests.csproj
dotnet/KA.KafkaOrchestrator.Domain.Tests/Classes/: HaversineCalculatorTests.cs  SexantUtilTests.cs
dotnet/KA.KafkaServices/: KA.Application.csproj
dotnet/KA.KafkaServices/Services/Consumers/Sightings/: SightingConsumerBase.cs  SlothSightingConsumer.cs
dotnet/KA.KafkaServices/Services/Producers/: SightingProducer.cs
dotnet/KA.KafkaServices/UseCases/GenerateNonsenseEvent/: GenerateNonsenseEvent.cs
python/: __init__.py  client_builder.py  database.py  datastore.py  kafka_consumer.py  models.py  omni_listener.py  settings.py  sighting_logger.py
web/tracking-view/: package.json
